--- a/priv/templates/release_rc_win_main.eex
+++ b/priv/templates/release_rc_win_main.eex
@@ -18,6 +18,11 @@ for %%A in ("%script_dir%\..\..") do (
 )
 set rel_dir=%release_root_dir%\releases\%rel_vsn%
 
+set ROOTDIR=%release_root_dir%
+set ROOT=%release_root_dir%
+set ERTS_LIB_DIR=%release_root_dir%\lib
+set EMU=beam
+
 if "%RELEASE_MUTABLE_DIR%"=="" (
   set mutable_dir=%release_root_dir%\var
 ) else (
@@ -50,7 +55,6 @@ set erlsrv="%bindir%\erlsrv.exe"
 set epmd="%bindir%\epmd.exe"
 set escript="%bindir%\escript.exe"
 set werl="%bindir%\werl.exe"
-set nodetool="%release_root_dir%\bin\nodetool"
 set consolidated_dir=%rootdir%\lib\%rel_name%-%rel_vsn%\consolidated
 set hook_dir=%rel_dir%\hooks
 set command_dir=%rel_dir%\commands
@@ -124,6 +128,33 @@ if exist "%command_dir%\%taskname%.bat" (
 )
 goto :eof
 
+:: Execute a command like you would with 'elixir'
+:elixir
+%erl% -boot_var ERTS_LIB_DIR %ERTS_LIB_DIR% ^
+      -boot_var ROOT %ROOT% ^
+      -boot "%start_clean%" ^
+      -pa "%consolidated_dir%" ^
+      -noshell -s elixir start_cli ^
+      -extra %*
+goto :eof
+
+:: Execute rc command locally
+:release_ctl
+call :elixir -e "Mix.Releases.Runtime.Control.main" -- %*
+goto :eof
+
+:: Execute rc command remotely
+:release_remote_ctl
+set rc_cmd="%~1"
+setlocal EnableDelayedExpansion
+call :elixir -e "Mix.Releases.Runtime.Control.main" -- ^
+             "%rc_cmd" ^
+             --name="%node_name%" ^
+             --cookie="!cookie!" ^
+             %*
+endlocal
+goto :eof
+      
 :: Find the ERTS dir
 :find_erts_dir
 if "%erts_vsn%"=="" (
@@ -364,7 +395,8 @@ set EMU=beam
 set PROGNAME=%~n0
 start "" /B "%erl%" -noshell -noinput +Bd ^
        -boot "%boot_script%" ^
-       -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
+       -boot_var ERTS_LIB_DIR %ERTS_LIB_DIR% ^
+       -boot_var ROOT %ROOT% ^
        -env ERL_LIBS "%release_root_dir%\lib%" ^
        -pa "%consolidated_dir%" ^
        -args_file "%vm_args%" ^
@@ -388,7 +420,7 @@ goto :eof
 :: Ping the running node
 :ping
 setlocal EnableDelayedExpansion
-%escript% %nodetool% ping %node_type% "%node_name%" -setcookie "!cookie!"
+call :release_ctl ping --peer="%node_name%" --cookie="!cookie!"
 endlocal
 goto :eof
 
@@ -400,7 +432,7 @@ if "%args"=="" (
   echo "Peer name is required!"
   exit /b 1
 ) else (
-  %escript% %nodetool% ping %node_type% "%args%" -setcookie "!cookie!"
+  call :release_ctl ping --peer="%args%" --cookie="!cookie!"
 )
 endlocal
 goto :eof
@@ -413,28 +445,18 @@ goto :eof
 :: Execute an RPC command
 :rpc
 call :ping>NUL
-if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
+if %ERRORLEVEL% NEQ 0 exit /b %ERRORLEVEL%
 setlocal EnableDelayedExpansion
-%escript% %nodetool% rpc %node_type% %node_name% -setcookie "!cookie!" %args%
-endlocal
-goto :eof
-
-:: Execute an RPC command where args are expressed
-:: in the form of an Erlang expression
-:rpcterms
-call :ping>NUL
-if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
-setlocal EnableDelayedExpansion
-%escript% %nodetool% rpcterms %node_type% %node_name% -setcookie "!cookie!" %args%
+call :release_remote_ctl rpc %args%
 endlocal
 goto :eof
 
 :: Eval an expression on the running node
 :eval
 call :ping>NUL
-if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
+if %ERRORLEVEL% NEQ 0 exit /b %ERRORLEVEL%
 setlocal EnableDelayedExpansion
-%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" !args!
+call :release_ctl eval !args!
 endlocal
 goto :eof
 
@@ -447,7 +469,8 @@ for /f "tokens=1-2*" %%a in ("%args%") do (
   set function=%%b
   set command_args=%%c
 )
-%erl% -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
+%erl% -boot_var ERTS_LIB_DIR %ERTS_LIB_DIR%^
+      -boot_var ROOT %ROOT% ^
        -config %sys_config% ^
        -hidden -noshell -boot start_clean ^
        -pa "%consolidated_dir%" ^
@@ -461,7 +484,7 @@ goto :eof
 call :ping>NUL
 if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
 setlocal EnableDelayedExpansion
-%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" "erlang:list_to_integer(os:getpid())."
+call :release_remote_ctl rpc "IO.inspect(:erlang.list_to_integer(:os.getpid()))"
 endlocal
 goto :eof
 
@@ -469,7 +492,7 @@ goto :eof
 call :ping>NUL
 if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
 setlocal EnableDelayedExpansion
-set get_pid_cmd=%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" "erlang:list_to_integer(os:getpid())."
+set get_pid_cmd=call :pid
 for /f "usebackq delims=" %%i in (`%%get_pid_cmd%%`) do set pid=%%i
 endlocal & set pid=%pid%
 goto :eof
@@ -480,9 +503,7 @@ call :ping>NUL
 if %ERRORLEVEL% GEQ 1 exit /b %ERRORLEVEL%
 call :pre_configure_hooks
 call :post_configure_hooks
-setlocal EnableDelayedExpansion
-%escript% %nodetool% reload_config %node_type% %node_name% -setcookie "!cookie!" "%sys_config%"
-endlocal
+call :release_remote_ctl reload_config --sysconfig="%sys_config%"
 goto :eof
 
 :: Describe this release
