--- a/priv/templates/release_rc_win_main.eex
+++ b/priv/templates/release_rc_win_main.eex
@@ -7,7 +7,7 @@
 :: Set variables that describe the release
 set rel_name=<%= release_name %>
 set rel_vsn=<%= release_version %>
-set erts_vsn=<%= erts_vsn %>
+set erts_vsn=<%= if ((is_binary(include_erts) or include_erts) and not is_nil(erts_vsn)) do %><%= erts_vsn %><% end %>
 set erl_opts=<%= erl_opts %>
 
 :: Discover the release root directory from the directory
