--- a/priv/templates/release_rc_main.eex
+++ b/priv/templates/release_rc_main.eex
@@ -8,6 +8,8 @@ if [ ! -z "$DEBUG_BOOT" ]; then
     set -x
 fi
 
+unset CDPATH
+
 # Name of the release
 REL_NAME="${REL_NAME:-<%= release_name %>}"
 # Current version of the release
