Update exec script to use pwsh over powershell, when available

--- a/priv/templates/release_rc_win_exec.eex
+++ b/priv/templates/release_rc_win_exec.eex
@@ -8,4 +8,11 @@ for %%A in ("%script_dir%\..") do (
 set rel_name=<%= release_name %>
 set rel_vsn=<%= release_version %>
 set boot_script=%release_root_dir%\releases\%rel_vsn%\%rel_name%.ps1
-powershell -NonInteractive -NoProfile -ExecutionPolicy Bypass -Command "& "%boot_script%" @args" %*
+
+:: Use pwsh.exe rather than powershell.exe if available
+set prog=powershell
+where pwsh
+if %ERRORLEVEL% eq 0 (
+  set prog=pwsh
+)
+%prog% -NonInteractive -NoProfile -ExecutionPolicy Bypass -Command "& "%boot_script%" @args" %*
