--- a/priv/templates/release_rc_win_exec.eex
+++ b/priv/templates/release_rc_win_exec.eex
@@ -11,7 +11,7 @@ set boot_script=%release_root_dir%\releases\%rel_vsn%\%rel_name%.ps1
 
 :: Use pwsh.exe rather than powershell.exe if available
 set prog=powershell
-where pwsh
+where pwsh >nul 2>nul
 if %ERRORLEVEL% eq 0 (
   set prog=pwsh
 )
