Fix the equality comparison in windows batch files
According to [documentation](https://ss64.com/nt/if.html),
equality comparison in Windows batch files should use the
[`equ` operator](https://ss64.com/nt/equ.html).

The previous version would output `eq was unexpected at this time.`

--- a/priv/templates/release_rc_win_exec.eex
+++ b/priv/templates/release_rc_win_exec.eex
@@ -12,7 +12,7 @@ set boot_script=%release_root_dir%\releases\%rel_vsn%\%rel_name%.ps1
 :: Use pwsh.exe rather than powershell.exe if available
 set prog=powershell
 where pwsh >nul 2>nul
-if %ERRORLEVEL% eq 0 (
+if %ERRORLEVEL% equ 0 (
   set prog=pwsh
 )
 %prog% -NonInteractive -NoProfile -ExecutionPolicy Bypass -Command "& "%boot_script%" @args" %*
