clean spurious whitespace in mix.exs
update async thread to provide a OTP21+ version

format test/cases/init_test.exs

adds a default vm.args in rel

--- a/priv/templates/example_config.eex
+++ b/priv/templates/example_config.eex
@@ -38,6 +38,7 @@ environment :prod do
   set include_erts: true
   set include_src: false
   set cookie: <%= inspect(get_cookie.()) %>
+  set vm_args: "rel/vm.args"
 end
 <%= unless no_docs do %>
 # You may define one or more releases in this file.
