--- a/priv/templates/vm.args.default.eex
+++ b/priv/templates/vm.args.default.eex
@@ -1,8 +1,12 @@
+## This file provide the arguments provided to the VM at startup
+## You can find a full list of flags and their behaviours at
+## http://erlang.org/doc/man/erl.html
+
 ## Name of the node
--name <%= release_name %>@127.0.0.1
+-name <%%= release_name %>@127.0.0.1
 
 ## Cookie for distributed erlang
--setcookie <%= release.profile.cookie %>
+-setcookie <%%= release.profile.cookie %>
 
 ## Heartbeat management; auto-restarts VM if it dies or becomes unresponsive
 ## (Disabled by default..use with caution!)
@@ -22,4 +26,5 @@
 ##-env ERL_FULLSWEEP_AFTER 10
 
 # Enable SMP automatically based on availability
+# On OTP21+, this is not needed anymore.
 -smp auto
