--- a/priv/templates/release_rc_win_main.ps1.eex
+++ b/priv/templates/release_rc_win_main.ps1.eex
@@ -87,7 +87,10 @@ if ($Env:RELEASE_MUTABLE_DIR -eq $null) {
 # be stored in. defaults to /log in the release root directory
 $Env:RUNNER_LOG_DIR = (join-path $Env:RELEASE_MUTABLE_DIR "log")
 # Path to start_erl.data
-$Env:START_ERL_DATA = (join-path $release_root_dir (join-path "releases" "start_erl.data"))
+$Env:START_ERL_DATA = (join-path $Env:RELEASE_MUTABLE_DIR "start_erl.data")
+if (-not (test-path $Env:START_ERL_DATA)) {
+    copy-item -Path (join-path $releases_dir "start_erl.data") -Destination $Env:START_ERL_DATA -Force
+}
 # Directory containing lifecycle hook scripts
 $Env:HOOKS_DIR = (join-path $Env:REL_DIR "hooks")
 # Allow override of where to read configuration from
